// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select :props :bordered 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :clearable 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :creatable 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :disabled 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-is-disabled t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-is-disabled t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :labelInValue 1`] = `
<div
  class="t-select-wrap"
  labelinvalue="false"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :loading 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <li
              class="t-select-loading-tips t-size-m"
            >
              加载中
            </li>
            <!---->
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <!---->
      <!---->
      <svg
        class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    
  </div>
</div>
`;

exports[`Select :props :multiple 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-is-selected-multiple t-size-m t-select-create-option-special"
                title=""
              >
                <label
                  class="t-checkbox undefined"
                  modelvalue="false"
                >
                  <input
                    class="t-checkbox__former"
                    type="checkbox"
                  />
                  <span
                    class="t-checkbox__input"
                  />
                  <span
                    class="t-checkbox__label"
                  >
                    
                    
                    
                  </span>
                </label>
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :placeholder 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        please select
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :remote 1`] = `
<div
  class="t-select-wrap"
  remote="true"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :reserveKeyword 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select :props :size 1`] = `
<div
  class="t-select-wrap"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-l t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-l"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              <!---->
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-l"
    >
      <!---->
      <span
        class="t-select-placeholder"
      >
         
        请选择
      </span>
      
      
      <span
        class="t-tag t-tag--default t-size-l t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <!---->
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select Option :props :disabled 1`] = `
<div
  class="t-select-wrap"
  modelvalue="1"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              
              <li
                class="t-select-option t-is-disabled t-is-selected t-size-m"
                title="1"
              >
                1
              </li>
              
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <!---->
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <span
        class="t-select-selectedSingle"
        title="1"
      >
        1
      </span>
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select Option :props :label 1`] = `
<div
  class="t-select-wrap"
  modelvalue="1"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              
              <li
                class="t-select-option t-is-selected t-size-m"
                title="1"
              >
                1
              </li>
              
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <!---->
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <span
        class="t-select-selectedSingle"
        title="1"
      >
        1
      </span>
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select Option :props :value 1`] = `
<div
  class="t-select-wrap"
  modelvalue="1"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              
              <li
                class="t-select-option t-is-selected t-size-m"
                title="1"
              >
                1
              </li>
              
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <!---->
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <span
        class="t-select-selectedSingle"
        title="1"
      >
        1
      </span>
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Select OptionGroup :props :value 1`] = `
<div
  class="t-select-wrap"
  modelvalue="1"
>
  <div
    class="t-popup-reference t-select-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-select-dropdown narrow-scrollbar"
        >
          
          <div>
            <ul
              class="t-select-create-option"
              style="display: none;"
            >
              <li
                class="t-select-option t-size-m t-select-create-option-special"
                title=""
              >
                
              </li>
            </ul>
            <!---->
            <li
              class="t-select-empty t-size-m"
            >
              暂无数据
            </li>
            <ul
              class="t-select__groups"
              style="display: none;"
            >
              
              <li
                class="t-option-group t-size-m"
              >
                <ul
                  class="t-option-group-header"
                >
                  num
                </ul>
                <ul>
                  
                  <li
                    class="t-select-option t-is-selected t-size-m"
                    title="1"
                  >
                    1
                  </li>
                  
                </ul>
              </li>
              <li
                class="t-option-group t-size-m"
              >
                <ul
                  class="t-option-group-header"
                >
                  abc
                </ul>
                <ul>
                  
                  <li
                    class="t-select-option t-size-m"
                    title="a"
                  >
                    a
                  </li>
                  
                </ul>
              </li>
              
            </ul>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-select t-size-m"
    >
      <!---->
      <!---->
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        <!---->
        
        +0
        
        
      </span>
      <span
        class="t-select-selectedSingle"
        title="1"
      >
        1
      </span>
      <!---->
      <svg
        class="t-fake-arrow t-select-right-icon"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;
